added category model
