# src/routes/auth.routes.js
@@ -6,8 +6,6 @@ router.post("/login", auth.userLogin);
 
 router.post("/register", auth.registerNewUser);
 
-// router.post("/verify", auth.verifyEmail);
-
-// router.put("/reset", auth.resetPassword);
+router.put("/reset", auth.resetPassword);
 
 module.exports = router;
