# swagger/docs/auth.json
@@ -61,7 +61,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
+                  "user_name": {
                     "type": "string"
                   },
                   "password": {
@@ -70,7 +70,7 @@
                 },
                 "required": ["username", "password"],
                 "example": {
-                  "username": "alice_smith",
+                  "user_name": "alice_smith",
                   "password": "Vikasms07@"
                 }
               }
@@ -80,45 +80,6 @@
         "responses": {
           "200": {
             "description": "Login Successfully"
-          },
-          "400": {
-            "description": "Bad Request - Invalid input data"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/v1/auth/verify": {
-      "post": {
-        "tags": ["authentication"],
-        "summary": "verify the users email and generate the otp to reset the password",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "type": "string"
-                  }
-                },
-                "required": ["email"],
-                "example": {
-                  "email": "vermavikku1998@gmail.com"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OTP  Generated Successfully"
           },
           "400": {
             "description": "Bad Request - Invalid input data"
@@ -143,21 +104,17 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "email": {
+                  "user_name": {
                     "type": "string"
                   },
                   "password": {
                     "type": "string"
-                  },
-                  "otp": {
-                    "type": "string"
                   }
                 },
-                "required": ["email", "password", "otp"],
+                "required": ["user_name", "password"],
                 "example": {
-                  "email": "vermavikku1998@gmail.com",
-                  "password": "Vikasms07@",
-                  "otp": "689602"
+                  "user_name": "alice_smith",
+                  "password": "Vikasms07@"
                 }
               }
             }
